# moon

./: Cargo.toml  README.md  next.config.js  package.json  pnpm-lock.yaml  pubspec.yaml
app/: page.tsx
client/: pubspec.yaml
client/lib/: client.dart
client/lib/src/: client.dart  core_impl.dart  core_interface.dart  handler_adapter.dart  view_impl.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: DummySyntaxHighlighter.dart  document.dart  editor.dart  editor_host.dart  editor_tabs.dart  key_info.dart  line_cache.dart  main.dart  my_editable.dart  my_editable_text.dart  my_scroll_context.dart  my_scrollable.dart  my_text_field.dart  my_text_selection.dart  rich_code_field_main.dart  rich_editable_code.dart  test_data.dart  text_line.dart  tree_sitter_demo.dart
lib/core/: edit_ops.dart  index_set.dart  linewrap.dart  selection.dart  util.dart  xi_core.dart
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
moon/: Cargo.toml
rope/: pubspec.yaml
rope/example/: ropetoy.dart
rope/lib/: multiset.dart  rope.dart
rope/lib/src/: breaks.dart  delta.dart  interval.dart  rope.dart  tree.dart
rope/test/: rope_test.dart
src-tauri/: tauri.conf.json
test/: widget_test.dart
test/resources/: tree_sitter.dart
