[package]
name = "moon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.28.6"
wgpu = "0.16.1"

# wasm32 dependencies
console_error_panic_hook = "0.1.7"
console_log = "0.2"
web-sys = "0.3.61"
wasm-bindgen-futures = "0.4.34"
